--- a/index.html
+++ b/index.html
@@ -3,32 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/test.css">
-    <h1 id="header">welcome to my first site</h1>
+    <title>Md. Siamul Islam Shayon - Portfolio</title>
+    <link rel="stylesheet" href="/css/test.css">
 </head>
 <body>
-    <div id="pro">
-        <h2>Md. siamul islam shayon</h2>
-        <p><span id="infor">age:</span>23</p>
-        <p><span id="infor">hight:</span>5.6</p>
-        <img id="profile" src="image/shayon.png" alt="personal picture" width="200" height="200">
-        <h3>social media</h3>
-        <li>
-            <ul>
-                <a href="https://www.facebook.com/sh0yon/"><img  src="image/Facebook.png" alt="" width="50px" height="50px"></a>
-             </ul>
-             <ul>
-                <a href="https://github.com/shayon10"><img src="image/git.png" alt=""width="50px" height="50px"></a>
-                
-             </ul>
-             <ul>
-                <a href="https://www.instagram.com/"><img src="image/insta.jpeg" alt=""width="50px" height="50px"></a>
-             </ul>
-             <p>okk</p>
-             <p>okk</p>
-
-        </li>
-    </div>
+    <header>
+        <h1>Md. Siamul Islam Shayon</h1>
+        <p>AI Enthusias | Computer Vision Expert | Data Analyst</p>
+        <img src="https://media.licdn.com/dms/image/v2/D5603AQFVAsN3EyWlwQ/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1731471777114?e=1740009600&v=beta&t=ownnHYNZX4jgbSM5PEpUFQZgxgo2e1jPDU83T4nv4EA" alt="Profile Picture" class="profile-pic">
+    </header>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#education">Education</a>
+        <a href="#projects">Projects</a>
+        <a href="#research">Research</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>
+            I am a highly skilled professional specializing in Artificial Intelligence, Computer Vision, and data analysis. Proficient in tools like TensorFlow, PyTorch, and OpenCV, I excel at crafting innovative AI-driven solutions. My leadership, communication, and problem-solving skills complement my technical expertise. With a strong foundation in academic research and practical applications, I am pursuing advanced studies to specialize further in AI solutions.
+        </p>
+    </section>
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li><strong>Core Competencies:</strong> AI Development, Computer Vision, Deep Learning, TensorFlow, PyTorch, ML Data Analysis, OpenCV</li>
+            <li><strong>Soft Skills:</strong> Leadership, Communication, Problem-Solving</li>
+            <li><strong>Software Proficiency:</strong> Microsoft Word, Excel, PowerPoint, Photoshop</li>
+        </ul>
+    </section>
+    <section id="research" class="research-section">
+        <h2>Research</h2>
+        <ul>
+            <li>
+                <strong>Energy Aware Planning Approach Considering Cost of Electrical Energy for Sustainable Development</strong><br>
+                <a href="https://ieeexplore.ieee.org/abstract/document/10675084/" target="_blank">Read More on IEEE</a>
+            </li>
+            <li>
+                <strong>Multi-Class Brain Tumour Classification with CNN on MRI Scans</strong><br>
+                <a href="https://scholar.google.com/citations?user=j5sSWawAAAAJ&hl=en" target="_blank">Read More on scholar</a>
+            </li>
+        </ul>
+    </section>
+    <section id="education">
+        <h2>Education</h2>
+        <ul>
+            <li><strong>School:</strong> Boalmari George Academy</li>
+            <li><strong>College:</strong> Rajarbag Police Line School and College</li>
+            <li><strong>University:</strong> East West University</li>
+        </ul>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>
+                <strong>IT Management Simulation: Cyber Attack!</strong><br>
+                Managed a simulated DDoS attack, implementing mitigation strategies and restoring services while coordinating stakeholder communication.
+            </li>
+            <li>
+                <strong>Deep Learning for Dermatology CAD</strong><br>
+                Developed a deep learning solution to classify skin diseases, improving diagnostic accuracy and utilizing disease taxonomy.
+            </li>
+        </ul>
+    </section>
+    
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:s.i.shayon@gmail.com">s.i.shayon@gmail.com</a></p>
+        <div class="social-links">
+            <a href="https://www.facebook.com/profile.php?id=100007828719661" target="_blank">Facebook</a>
+            <a href="https://github.com/shayon10" target="_blank">Github</a>
+            <a href="https://www.linkedin.com/in/md-siamul-islam-shayon-1812011b5/" target="_blank">LinkedIn</a>
+            <a href="https://www.instagram.com/shayon_10/" target="_blank">Instagram</a>
+        </div>
+    </section>
+    <footer>
+        <p>&copy; 2024 Md. Siamul Islam Shayon. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
